<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Launcher3</string>
    <string name="folder_name"></string>
    <string name="work_folder_name">Work</string>
    <string name="activity_not_found">App isn\'t installed.</string>
    <string name="activity_not_available">App isn\'t available</string>
    <string name="safemode_shortcut_error">Downloaded app disabled in Safe mode</string>
    <string name="safemode_widget_error">Widgets disabled in Safe mode</string>
    <string name="shortcut_not_available">Shortcut isn\'t available</string>
    <string name="home_screen">Home screen</string>
    <string name="custom_actions">Custom actions</string>
    <string name="long_press_widget_to_add">Touch &amp; hold to pick up a widget.</string>
    <string name="long_accessible_way_to_add">Double-tap &amp; hold to pick up a widget or use custom actions.</string>
    <string name="widget_dims_format">%1$d \u00d7 %2$d</string>
    <string name="widget_accessible_dims_format">%1$d wide by %2$d high</string>
    <string name="add_item_request_drag_hint">Touch &amp; hold to place manually</string>
    <string name="place_automatically">Add automatically</string>
    <string name="all_apps_search_bar_hint">Search apps</string>
    <string name="all_apps_loading_message">Loading apps&#8230;</string>
    <string name="all_apps_no_search_results">No apps found matching \"<xliff:g id="query" example="Android">%1$s</xliff:g>\"</string>
    <string name="all_apps_search_market_message">Search for more apps</string>
    <string name="notifications_header">Notifications</string>
    <string name="long_press_shortcut_to_add">Touch &amp; hold to pick up a shortcut.</string>
    <string name="long_accessible_way_to_add_shortcut">Double-tap &amp; hold to pick up a shortcut or use custom actions.</string>
    <string name="out_of_space">No more room on this Home screen.</string>
    <string name="hotseat_out_of_space">No more room in the Favorites tray</string>
    <string name="all_apps_button_label">Apps list</string>
    <string name="all_apps_button_personal_label">Personal apps list</string>
    <string name="all_apps_button_work_label">Work apps list</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="remove_drop_target_label">Remove</string>
    <string name="uninstall_drop_target_label">Uninstall</string>
    <string name="app_info_drop_target_label">App info</string>
    <string name="install_drop_target_label">Install</string>
    <string name="permlab_install_shortcut">install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an app to add
        shortcuts without user intervention.</string>
    <string name="permlab_read_settings">read Home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows the app to read the settings and
        shortcuts in Home.</string>
    <string name="permlab_write_settings">write Home settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows the app to change the settings and
        shortcuts in Home.</string>
    <string name="msg_no_phone_permission"><xliff:g id="app_name" example="Launcher3">%1$s</xliff:g> is not allowed to make phone calls</string>
    <string name="gadget_error_text">Problem loading widget</string>
    <string name="gadget_setup_text">Setup</string>
    <string name="uninstall_system_app_text">This is a system app and can\'t be uninstalled.</string>
    <string name="folder_hint_text">Unnamed Folder</string>
    <string name="disabled_app_label">Disabled <xliff:g id="app_name" example="Messenger">%1$s</xliff:g></string>
    <plurals name="badged_app_label">
        <item quantity="one"><xliff:g id="app_name" example="Messenger">%1$s</xliff:g>, has <xliff:g id="notification_count" example="1">%2$d</xliff:g> notification</item>
        <item quantity="other"><xliff:g id="app_name" example="Messenger">%1$s</xliff:g>, has <xliff:g id="notification_count" example="3">%2$d</xliff:g> notifications</item>
    </plurals>
    <string name="default_scroll_format">Page %1$d of %2$d</string>
    <string name="workspace_scroll_format">Home screen %1$d of %2$d</string>
    <string name="workspace_new_page">New home screen page</string>
    <string name="folder_opened">Folder opened, <xliff:g id="width" example="5">%1$d</xliff:g> by <xliff:g id="height" example="3">%2$d</xliff:g></string>
    <string name="folder_tap_to_close">Tap to close folder</string>
    <string name="folder_tap_to_rename">Tap to save rename</string>
    <string name="folder_closed">Folder closed</string>
    <string name="folder_renamed">Folder renamed to <xliff:g id="name" example="Games">%1$s</xliff:g></string>
    <string name="folder_name_format">Folder: <xliff:g id="name" example="Games">%1$s</xliff:g></string>
    <string name="widget_button_text">Widgets</string>
    <string name="wallpaper_button_text">Wallpapers</string>
    <string name="settings_button_text">Home settings</string>
    <string name="msg_disabled_by_admin">Disabled by your admin</string>
    <string name="allow_rotation_title">Allow Home screen rotation</string>
    <string name="allow_rotation_desc">When phone is rotated</string>
    <string name="icon_badging_title">Notification dots</string>
    <string name="icon_badging_desc_on">On</string>
    <string name="icon_badging_desc_off">Off</string>
    <string name="title_missing_notification_access">Notification access needed</string>
    <string name="msg_missing_notification_access">To show Notification Dots, turn on app notifications for <xliff:g id="name" example="My App">%1$s</xliff:g></string>
    <string name="title_change_settings">Change settings</string>
    <string name="icon_badging_service_title">Show notification dots</string>
    <string name="auto_add_shortcuts_label">Add icon to Home screen</string>
    <string name="auto_add_shortcuts_description">For new apps</string>
    <string name="icon_shape_override_label">Change icon shape</string>
    <string name="icon_shape_override_label_location">on Home screen</string>
    <string name="icon_shape_system_default">Use system default</string>
    <string name="icon_shape_square">Square</string>
    <string name="icon_shape_squircle">Squircle</string>
    <string name="icon_shape_circle">Circle</string>
    <string name="icon_shape_teardrop">Teardrop</string>
    <string name="icon_shape_override_progress">Applying icon shape changes</string>
    <string name="package_state_unknown">Unknown</string>
    <string name="abandoned_clean_this">Remove</string>
    <string name="abandoned_search">Search</string>
    <string name="abandoned_promises_title">This app is not installed</string>
    <string name="abandoned_promise_explanation">The app for this icon isn\'t installed.
        You can remove it, or search for the app and install it manually.
    </string>
    <string name="app_downloading_title"><xliff:g id="name" example="Messenger">%1$s</xliff:g> downloading, <xliff:g id="progress" example="30%">%2$s</xliff:g> complete</string>
    <string name="app_waiting_download_title"><xliff:g id="name" example="Messenger">%1$s</xliff:g> waiting to install</string>
    <string name="widgets_bottom_sheet_title"><xliff:g id="name" example="Messenger">%1$s</xliff:g> widgets</string>
    <string name="widgets_list">Widgets list</string>
    <string name="widgets_list_closed">Widgets list closed</string>
    <string name="action_add_to_workspace">Add to Home screen</string>
    <string name="action_move_here">Move item here</string>
    <string name="item_added_to_workspace">Item added to home screen</string>
    <string name="item_removed">Item removed</string>
    <string name="action_move">Move item</string>
    <string name="move_to_empty_cell">Move to row <xliff:g id="number" example="1">%1$s</xliff:g> column <xliff:g id="number" example="1">%2$s</xliff:g></string>
    <string name="move_to_position">Move to position <xliff:g id="number" example="1">%1$s</xliff:g></string>
    <string name="move_to_hotseat_position">Move to favorites position <xliff:g id="number" example="1">%1$s</xliff:g></string>
    <string name="item_moved">Item moved</string>
    <string name="add_to_folder">Add to folder: <xliff:g id="name" example="Games">%1$s</xliff:g></string>
    <string name="add_to_folder_with_app">Add to folder with <xliff:g id="name" example="Messenger">%1$s</xliff:g></string>
    <string name="added_to_folder">Item added to folder</string>
    <string name="create_folder_with">Create folder with: <xliff:g id="name" example="Game">%1$s</xliff:g></string>
    <string name="folder_created">Folder created</string>
    <string name="action_move_to_workspace">Move to Home screen</string>
    <string name="action_resize">Resize</string>
    <string name="action_increase_width">Increase width</string>
    <string name="action_increase_height">Increase height</string>
    <string name="action_decrease_width">Decrease width</string>
    <string name="action_decrease_height">Decrease height</string>
    <string name="widget_resized">Widget resized to width <xliff:g id="number" example="2">%1$s</xliff:g> height <xliff:g id="number" example="1">%2$s</xliff:g></string>
    <string name="action_deep_shortcut">Shortcuts</string>
    <string name="shortcuts_menu_with_notifications_description">Shortcuts and notifications
    </string>
    <string name="action_dismiss_notification">Dismiss</string>
    <string name="notification_dismissed">Notification dismissed</string>
    <string name="all_apps_personal_tab">Personal</string>
    <string name="all_apps_work_tab">Work</string>
    <string name="work_profile_toggle_label">Work profile</string>
    <string name="bottom_work_tab_user_education_title">Find work apps here</string>
    <string name="bottom_work_tab_user_education_body">Each work app has a badge and is kept secure by your organization. Move apps to your Home screen for easier access.</string>
    <string name="work_mode_on_label">Managed by your organization</string>
    <string name="work_mode_off_label">Notifications and apps are off</string>
    <string name="bottom_work_tab_user_education_close_button">Close</string>
    <string name="bottom_work_tab_user_education_closed">Closed</string>
    <string name="iconPackPackageDefault" translatable="false">""</string>
    <string name="icon_pack">Icon pack</string>
    <string name="icon_pack_summary">Select a custom icon pack</string>
    <string name="icon_size_title">Icon size</string>
    <string name="grid_col_row_title">Columns and rows</string>
    <string name="grid_col_row_summary">Customize Grid Size of the Columns and Rows</string>
    <string name="number_of_columns_title">Grid and app drawer columns</string>
    <string name="number_of_rows_title">Grid and app drawer rows</string>
    <string name="about_aosp_launcher_us">AOSP Pure Launcher</string>
    <string name="about_aosp_launcher_version">Version</string>
    <string name="about_aosp_launcher_version_sum">1.0</string>
    <string name="thanks">Thanks for</string>
    <string name="sum_thanks">- Amir Zaidi (Rootless Launcher)\n- Lawnchair Launcher\n </string>
    <string name="date">Build date</string>
    <string name="sum_date">27/08/19</string>
    <string name="sum_about_app_aosp_launcher">About this app, version, information</string>
    <string name="developer_info_sum">Abdelkader Sellami</string>
    <string name="developer_info">Developer Info</string>
    <string name="app_base_title">Based On</string>
    <string name="app_base_title_sum">Based On Pure AOSP Launcher3</string>
    <string name="github_title">Github</string>
    <string name="github_sum">AOSP Pure Launcher Project Github</string>
    <string name="theme_style_title">Theme style</string>
    <string name="statusbar_expand_title">Swipe for notifications</string>
    <string name="statusbar_expand_summary">On the homescreen</string>
</resources>