<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2015 Google Inc.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <dz.aosp.purelauncher.preferences.IconPackPreference
        android:key="pref_iconPackPackage"
        android:title="@string/icon_pack"
        android:summary="@string/icon_pack_summary"
        android:persistent="true" />


    <dz.aosp.purelauncher.views.ButtonPreference
        android:key="pref_icon_badging"
        android:title="@string/icon_badging_title"
        android:icon="@drawable/notifications_dots"
        android:persistent="false"
        android:widgetLayout="@layout/notification_pref_warning" >
        <intent android:action="android.settings.NOTIFICATION_SETTINGS">
            <!-- This extra highlights the "Allow icon badges" field in Notification settings -->
            <extra
                android:name=":settings:fragment_args_key"
                android:value="notification_badging" />
        </intent>
    </dz.aosp.purelauncher.views.ButtonPreference>

    <SwitchPreference
        android:key="pref_add_icon_to_home"
        android:title="@string/auto_add_shortcuts_label"
        android:summary="@string/auto_add_shortcuts_description"
        android:icon="@drawable/add_icons"
        android:defaultValue="true"
        android:persistent="true" />

    <SwitchPreference
        android:key="pref_allowRotation"
        android:title="@string/allow_rotation_title"
        android:summary="@string/allow_rotation_desc"
        android:icon="@drawable/homescreen_rotation"
        android:defaultValue="@bool/allow_rotation"
        android:persistent="true" />

    <SwitchPreference
        android:key="pref_expand_statusbar"
        android:title="@string/statusbar_expand_title"
        android:summary="@string/statusbar_expand_summary"
        android:defaultValue="true"
        android:icon="@drawable/swipe_gestures"
        android:persistent="true" />

    <ListPreference
        android:key="pref_theme_style"
        android:title="@string/theme_style_title"
        android:persistent="true"
        android:entries="@array/theme_style_entries"
        android:entryValues="@array/theme_style_values"
        android:icon="@drawable/theme_picker"
        android:defaultValue="0" />

    <ListPreference
        android:key="pref_override_icon_shape"
        android:title="@string/icon_shape_override_label"
        android:summary="%s"
        android:entries="@array/icon_shape_override_paths_names"
        android:entryValues="@array/icon_shape_override_paths_values"
        android:defaultValue=""
        android:icon="@drawable/icon_shape"
        android:persistent="false" />

    <ListPreference
            android:key="pref_icon_size"
            android:title="@string/icon_size_title"
            android:summary="%s"
            android:entries="@array/icon_size_names"
            android:entryValues="@array/icon_size_values"
            android:defaultValue="average"
            android:icon="@drawable/icon_size"
            android:persistent="true" />

    <PreferenceScreen
        android:title="@string/grid_col_row_title"
        android:summary="@string/grid_col_row_summary"
        android:icon="@drawable/grid_col_row">
        <ListPreference
            android:key="pref_grid_columns"
            android:title="@string/number_of_columns_title"
            android:summary="%s"
            android:entries="@array/grid_names"
            android:entryValues="@array/grid_values"
            android:defaultValue="-1"
            android:persistent="true" />

        <ListPreference
            android:key="pref_grid_rows"
            android:title="@string/number_of_rows_title"
            android:summary="%s"
            android:entries="@array/grid_names"
            android:entryValues="@array/grid_values"
            android:defaultValue="-1"
            android:persistent="true" />
    </PreferenceScreen>

    <PreferenceScreen
            android:key="about_screen"
            android:icon="@drawable/app_info"
            android:summary="@string/sum_about_app_aosp_launcher"
            android:title="@string/about_aosp_launcher_us">
            <Preference
                android:key="@string/developer_info"
                android:title="@string/developer_info"
                android:summary="@string/developer_info_sum"
                android:persistent="false">
            </Preference>
			<Preference
                android:key="@string/app_base_title"
                android:title="@string/app_base_title"
                android:summary="@string/app_base_title_sum"
                android:persistent="false">
            </Preference>
            <Preference
                android:title="@string/thanks"
                android:summary="@string/sum_thanks" >
            </Preference>
			<Preference
                android:key="@string/about_aosp_launcher_version"
                android:title="@string/about_aosp_launcher_version"
                android:summary="@string/about_aosp_launcher_version_sum"
                android:persistent="false">
            </Preference>
            <Preference
                android:title="@string/date"
                android:summary="@string/sum_date" >
            </Preference>
            <Preference
                android:title="@string/github_title"
                android:summary="@string/github_sum">
                <intent android:action="android.intent.action.VIEW"
                        android:data="https://github.com/islem19/AOSP-Pure-Launcher" />
            </Preference>

            <Preference
                android:key="app_info"
                android:title="@string/app_info_drop_target_label"
                android:persistent="false">
                <intent
                    android:action="android.settings.APPLICATION_DETAILS_SETTINGS"
                    android:data="package:dz.aosp.purelauncher" />
            </Preference>
    </PreferenceScreen>

</PreferenceScreen>
